# gemm-101

./: .gitignore  CMakeLists.txt  README.md
include/: cuda_gemm.hpp  cuda_utils.hpp  gemm_utils.cuh  profile_utils.cuh
src/: 00_non_coalesced_global_memory_access.cu  01_coalesced_global_memory_access.cu  02_2d_block_tiling.cu  02_2d_block_tiling_vma.cu  03_2d_block_tiling_1d_thread_tiling.cu  03_2d_block_tiling_1d_thread_tiling_vma.cu  04_2d_block_tiling_2d_thread_tiling.cu  04_2d_block_tiling_2d_thread_tiling_vma.cu  05_2d_block_tiling_2d_thread_tiling_transposed.cu  05_2d_block_tiling_2d_thread_tiling_transposed_vma.cu  06_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_transposed.cu  06_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_transposed_vma.cu  07_2d_block_tiling_2d_warp_tiling_transposed_wmma.cu  07_2d_block_tiling_2d_warp_tiling_transposed_wmma_vma.cu  08_2d_block_tiling_2d_thread_tiling_cutlass_cute.cu  09_2d_block_tiling_2d_thread_tiling_cutlass_cute_tiledMMA_tiledCopy.cu  CMakeLists.txt  cuda_utils.cu  profile_cuda_gemm_fp16.cu  profile_cuda_gemm_fp32.cu  profile_utils.cu  utils.cu
